--- a/iedcformat/index.html
+++ b/iedcformat/index.html
@@ -77,25 +77,25 @@
                             <a href="">E-Summit'20</a>
                         </li>
                         <li>
-                            <a href="./index.html">Home</a>
+                            <a href="../index.html">Home</a>
                         </li>
                         <li>
-                            <a href="./program/index.html">Program</a>
+                            <a href="../program/index.html">Program</a>
                         </li>
                         <li>
                             <a href="../sponsors/index.html">Sponsors</a>
                         </li>
                         <li>
-                            <a href="./speakers/index.html">Speakers</a>
+                            <a href="../speakers/index.html">Speakers</a>
                         </li>
                         <li>
-                            <a href="./events/index.html">Events</a>
+                            <a href="../events/index.html">Events</a>
                         </li>
                         <li>
-                            <a href="./iedcformat/index.html">IEDC FORMAT</a>
+                            <a href="../iedcformat/index.html">IEDC FORMAT</a>
                         </li>
                         <li>
-                            <a href="./faq/index.html">FAQ</a>
+                            <a href="../faq/index.html">FAQ</a>
                         </li>
                     </ul>
                 </nav>
@@ -305,9 +305,7 @@
 
                     <div class="text-group__ft" data-animate-in="up" data-animate-in-delay="900"
                         style="background-color:rgb(250, 250, 250);">
-                        <a class="btn"
-                            href="https://www.thecollegefever.com/college-entrepreneurship-events/e-summit20-annual-entrepreneurship-summit-of-iiit-allahabad"
-                            target="_blank">Register Here<span></span></a>
+                        <a class="btn" href="../iedcformat.pdf" target="_blank">GUIDELINES<span></span></a>
                     </div>
                     <br>
                 </div>
