--- a/iedcformat/index.html
+++ b/iedcformat/index.html
@@ -182,23 +182,26 @@
                     </header>
                     <div style="background-color:rgb(255, 255, 255);" data-animate-in="up">
                         <p>
-                            <ol style="list-style-type:disc;">
+                            <ul style="list-style-type:disc;">
 
 
-                                <li> IEDC form filling in the IEDC project format as mentioned in the guidelines for
-                                    submitting Student Project Details and e-mailing to newgeniedc@iiita.ac.in</li>
+                                <li> IEDC form filling in the IEDC project format as mentioned in the guidelines
+                                    mentioned below for
+                                    submitting Student Project Details and e-mailing to <a
+                                        style="color:rgb(204, 9, 238)"
+                                        href=mailto:newgeniedc@iiita.ac.in>newgeniedc@iiita.ac.in</a> </li>
                                 <li>Participate in Product Hack being held from the 7th of February, 2020 to the
                                     9th of February, 2020 @ IIIT-Allahabad free of cost to showcase your technical
                                     skills.
                                     Register for Product Hack <a
                                         href="https://www.thecollegefever.com/events/e-summit20-annual-entrepreneurship-summit-of-iiit-allahabad"
-                                        style="color:rgb(191, 12, 223)">here</a>.
+                                        style="color:rgb(205, 14, 238)">here</a>.
                                     <div class=""></div>
                                 <li>You’ll be informed via mail to present your project to panel for selection of
                                     your project under NewGen IEDC..</li> Attach your project idea in the same google
                                 form given above.</li>
                                 <li>Start working on your project.</li>
-                            </ol>
+                            </ul>
                         </p>
                     </div>
                 </div>
@@ -293,7 +296,7 @@
                                     rel="nofollow noreferrer">company/iiicallahabad</a> -->
                         </li>
                         <li>
-                            <h4>Phone Number : +91-9138579761</h4>
+                            <h4>Phone Number : +91 7521050744</h4>
                         </li>
                     </ul>
                 </div>
