--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <a href="./program/index.html">Program</a>
                         </li>
                         <li>
-                            <a href="../sponsors/index.html">Sponsors</a>
+                            <a href="./sponsors/index.html">Sponsors</a>
                         </li>
                         <li>
                             <a href="./speakers/index.html">Speakers</a>
@@ -131,8 +131,12 @@
                             target="_blank">Register Here<span></span></a>
                     </div>
                     <div class="text-group__ft" data-animate-in="up" data-animate-in-delay="900">
-                        <a class="btn" href="http://esummit-iiita.com/bhacks/" target="_blank">Apply For Product
+                        <a class="btn" href="https://esummit-iiita.com/bhacks/" target="_blank">Apply For Product
                             Hack<span></span></a>
+                    </div>
+                    <div class="text-group__ft" data-animate-in="up" data-animate-in-delay="900">
+                        <a class="btn" href="https://forms.gle/YjXqowBFq2mmAHB69" target="_blank">Apply For
+                            IEDC Project<span></span></a>
                     </div>
                     <div class="text-group__ft" data-animate-in="up" data-animate-in-delay="900">
                         <!-- <a class="btn" href="../sponserus/index.html" target="_blank">Sponsor Us<span></span></a> -->
@@ -140,7 +144,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="stars"></div>
             <div class="stars-lg"></div>
             <figure class="shooting-star">
@@ -157,7 +160,8 @@
                 <header class="section section--short section--flush-top text-center text-white">
                     <h2>
                         <!-- <span class="h3" data-animate-in="up">An event for people</span> -->
-                        <span class="h2" data-animate-in="up" data-animate-in-delay="100">WHAT IS AN E-SUMMIT?</span>
+                        <span class="h2" data-animate-in="up" data-animate-in-delay="100">WHAT IS E-SUMMIT 2020, IIIT
+                            ALLAHABAD?</span>
                     </h2>
                 </header>
                 <div class="text-white" data-animate-in="up">
@@ -334,7 +338,54 @@
                         </ul>
                 </div> -->
         </div>
+        <div class="container section section--flush-top">
+            <header data-animate-in="up">
+                <h4 class="h1 text-gradient">Official event partners</h4>
+                <div class="rock-icon"><img src="assets/img/universe/shapes/rock-on.png" alt="rock on icon" /></div>
+            </header>
 
+            <div class="section section--short">
+                <ul class="logo-list" data-animate-in="up">
+
+
+                    <li>
+                        <a href="https://iiic.iiita.ac.in/" target="_blank">
+                            <img src="assets/img/universe/sponsors/IIII.png" alt="Axosoft" width="60%" />
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="" target="_blank">
+                            <img src="assets/img/universe/sponsors/newgenlogo.png" alt="Axosoft" />
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="https://meity.gov.in/" target="_blank">
+                            <img src="assets/img/universe/sponsors/meityLogo.png" alt="Axosoft" />
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://www.nstedb.com/" target="_blank">
+                            <img src="assets/img/universe/sponsors/nstedb.jpg" alt="Axosoft" />
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://dst.gov.in/" target="_blank">
+                            <img src="assets/img/universe/sponsors/DST.png" alt="Axosoft" width="80%" />
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.ediindia.org/" target="_blank">
+                            <img src="assets/img/universe/sponsors/EDII.png" alt="Axosoft" width="95%" />
+                        </a>
+                    </li>
+
+
+
+                </ul>
+            </div>
+        </div>
 
         <div class="container section section--flush-top">
             <header data-animate-in="up">
@@ -510,6 +561,27 @@
             </div>
         </div>
 
+        <div class="container section section--flush-top">
+            <header data-animate-in="up">
+                <h4 class="h1 text-gradient">Exploration Partner</h4>
+                <div class="rock-icon"><img src="assets/img/universe/shapes/rock-on.png" alt="rock on icon" /></div>
+            </header>
+
+            <div class="section section--short">
+                <ul class="logo-list" data-animate-in="up">
+
+
+                    <li>
+                        <a href="https://www.wiley.com/en-us" target="_blank">
+                            <img src="assets/img/universe/sponsors/explora.jpg" alt="compose" />
+                        </a>
+                    </li>
+
+
+
+                </ul>
+            </div>
+        </div>
 
         <div class="container section section--flush-top">
             <header data-animate-in="up">
