--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <a href="./program/index.html">Program</a>
                         </li>
                         <li>
-                            <a href="./sponsors/index.html">Sponsors</a>
+                            <a href="../sponsors/index.html">Sponsors</a>
                         </li>
                         <li>
                             <a href="./speakers/index.html">Speakers</a>
