--- a/index.html
+++ b/index.html
@@ -173,8 +173,7 @@
                         the leaders and problem solvers of today and tomorrow. This 3-day extravaganza will see
                         students, corporates, entrepreneurs and budding enthusiasts on a common stage. This event in
                         IIIT Allahabad will surely prove to be the home of extensive networking, inspiring stories and a
-                        breeding ground for future solutions. We look forward to making you a part of this celebration
-                        and hopefully build a thriving long-term partnership.
+                        breeding ground for future solutions.
                         <br>
                         <br>
                         E-Summit ‘20 is a conclave of series of business workshops, hackathons, various incubation
